--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 </div>
 <hr />
 
-<button class="btn btn-primary" (click)="onDisplayDetails()">
+<button class="btn btn-primary mx-1" (click)="onDisplayDetails()">
   Display Details
 </button>
 
